cmGeneratorExpression: Add cmGeneratorExpression::Evaluate utility

cmGeneratorExpression::Evaluate is a shortcut when only the evaluated string is
needed or an instance of cmCompiledGeneratorExpression cannot be cached.

Fixes: #19686